[package]
name = "kupier-btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
num-format = "0.4.0"
tokio = "1.18.5"
bytes = "1.1.0"
serde_derive = "1.0.130"
serde = "1.0.130"
bincode = "1.3.3"
rand = "0.8.4"

[dev-dependencies]
pretty_assertions = "1.0.0"